--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -232,24 +232,20 @@
     </footer>
 
     <script>
-        
-        function sticktothetop() {
-            var window_top = $(window).scrollTop();
-            var top = $('#work').offset().top;
-            if (window_top > top) {
-                $('#menuToggle').addClass('gone');
-                $('#work').height($('#menuToggle').outerHeight());
-                alert("hallo");
-            } else {
-                $('#menuToggle').removeClass('gone');
-                $('#work').height(0);
-            }
+        function distanceBetweenElems(elem1, elem2) {
+            var e1Rect = elem1.getBoundingClientRect();
+            var e2Rect = elem2.getBoundingClientRect();
+            var dx = (e1Rect.left + (e1Rect.right - e1Rect.left) / 2) - (e2Rect.left + (e2Rect.right - e2Rect.left) /
+                2);
+            var dy = (e1Rect.top + (e1Rect.bottom - e1Rect.top) / 2) - (e2Rect.top + (e2Rect.bottom - e2Rect.top) / 2);
+            var dist = Math.sqrt(dx * dx + dy * dy);
+            return dist;
         }
-        $(function () {
-            $(window).scroll(sticktothetop);
-            sticktothetop();
-            
-        });
+        var target1 = document.querySelector('#work');
+        var target2 = document.querySelector('#menuToggle');
+        if (distanceBetweenElems(target1, target2) < 100) {
+            console.log(distanceBetweenElems(target1, target2))
+        }
     </script>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
