--- a/Portfolio/subpages/project.html
+++ b/Portfolio/subpages/project.html
@@ -7,7 +7,7 @@
     <title>Document nr. -1</title>
 </head>
 <body>
-    <img src="./photo/moss-you'll float too.jpg" alt="...">
+    <img src="../photo/moss-you'll float too.jpg" alt="...">
     <h1>Tu powinien być jakiś projekt</h1>
 </body>
 </html>
