--- a/Portfolio/subpages/projectContainer.html
+++ b/Portfolio/subpages/projectContainer.html
@@ -7,7 +7,7 @@
     <title>Document nr. -2</title>
 </head>
 <body>
-    <img src="./photo/Jen.jpg" alt="...">
+    <img src="../photo/Jen.jpg" alt="...">
     <h1>Tu powinny być wszystkie projekty</h1>
 </body>
 </html>
