--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,20 +22,23 @@
                 <li><a href="#resume">Resume</a></li>
             </ul>
         </div>
-        <nav role="navigation">
-            <div id="menuToggle">
-                <input type="checkbox" />
-                <span></span>
-                <span></span>
-                <span></span>
-                <ul id="menu">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#resume">Resume</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="sec-nav">
+            <nav role="navigation">
+                <div id="menuToggle">
+                    <input type="checkbox" />
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <ul id="menu">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#resume">Resume</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
     </header>
     <div class="icons-social-container">
         <div class="icons-social-wrapper">
